# Catolica

./: README.md
Semestre 01/02-24 - Algoritmos e Programação Estruturada/: GitHub_Aulas.txt
Semestre 01/02-24 - Algoritmos e Programação Estruturada/Lista Exercícios/Lista07/: CMakeLists.txt  Lista07_Ex002.c  Lista07_Ex005.c
Semestre 01/02-24 - Algoritmos e Programação Estruturada/final_flappy/: CMakeLists.txt  FlappyBird.c  FlappyBird.h  configs.c  configs.h  creditos.c  creditos.h  inicio.c  inicio.h  instrucao.c  instrucao.h  main.c  msg.c  msg.h  score.c  score.h
Semestre 01/02-24 - Engenharia de Software/: Apresentacao Modelo Pesquisa.pptx  Modelo Projeto - Prof Milton.docx
Semestre 01/02-24 - Matemática Discreta/: Conteudos.txt  PE_mat_discreta_es_not_sex.docx  Partículas Virais.docx
Semestre 01/02-24 - Nivelamento Algoritmos e programação estruturada/: Comandos de Repetição.pptx  Exercício Final do Nivelamento.docx  lista03_ex008.c
Semestre 01/02-24 - Relação Príncipios e Valores/: Inaplicação_Deepack.docx  Marcal_Eike_Projeto.docx  Orientações Elaboração Projeto de Vida adaptado 2024_2.doc  Projeto Princípios e Valores.docx  Projeto de Vida 1ª Parte.doc  RPV Plano de ensino 2024.2_Sábado.docx  Relação Princípios e Valores.pptx
Semestre 01/02-24 - Sistemas Computacionais/: Lista 1 Exercícios Rev SC.docx  Lista 2 Exercícios Rev Sist Comp.docx  Lista 2 Exercícios de Lógica Digital -Resolução uv (1).docx  Lista 3 de Exercicios Lógica Combinacional (1).docx  Prática Simulação - Executado.docx  circuitonand.txt
(+159 files in other folders)
