cmake_minimum_required(VERSION 3.29)
project(Lista07 C)

set(CMAKE_C_STANDARD 99)

add_executable(
        lista07_Ex006.c
        lista07_Ex005.c
        lista07_Ex004.c
        lista07_Ex003.c
        lista07_Ex002.c
        lista07_Ex001.c
        Lista07_Ex002.c
        Lista07_Ex003.c
        Lista07_Ex004.c
        Lista07_Ex005.c
        Lista07_Ex006.c
        Lista07_Ex007.c)
